feat: implementing put endpoint for updating user details
