# src/controllers/userController.ts
@@ -100,3 +100,42 @@ export const deleteUser = async (
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
+
+export const updateUser = async (
+  req: Request,
+  res: Response
+): Promise<void> => {
+  await body("name").optional().isString().notEmpty().run(req);
+  await body("email").optional().isEmail().run(req);
+  await body("githubUrl").optional().isURL().run(req);
+  await body("linkedinUrl").optional().isURL().run(req);
+  await body("title").optional().isString().run(req);
+  await body("subtitle").optional().isString().run(req);
+  await body("projects").optional().isArray().notEmpty().run(req);
+  await body("skills").optional().isArray().notEmpty().run(req);
+
+  const errors = validationResult(req);
+  if (!errors.isEmpty()) {
+    res.status(400).json({ errors: errors.array() });
+    return;
+  }
+
+  const id = req.params.id;
+  const updateData = req.body;
+
+  try {
+    const updatedUser = await User.findByIdAndUpdate(id, updateData, {
+      new: true,
+      runValidators: true,
+    });
+
+    if (!updatedUser) {
+      res.status(404).json({ message: "User not found" });
+      return;
+    }
+    res.json(updatedUser);
+  } catch (error) {
+    console.error("Error updating user:", error);
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
